src/objects/Quote__c.object
<CustomObject>
    <description>Used to build quotes for Service Requests including: Residential, Un-furnished, Furniture-Only, Hotel, Trailer-Mobile Home, and Commercial.</description>
    <fields>
        <fullName>AS_Assigned__c</fullName>
        <description>The AS assigned on the Claim to be displayed on the PA document generated by Houston.</description>
        <formula>Service_Request__r.Area_Specialist__c</formula>
        <label>AS Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjuster_Account_Name__c</fullName>
        <description>Account name to display on the quote document</description>
        <label>Adjuster Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjuster_Fax__c</fullName>
        <description>Adjuster fax number to go on the quote document</description>
        <label>Adjuster Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Adjuster_ID__c</fullName>
        <formula>Service_Request__r.Opportunity__r.X18_Char_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjuster ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjuster_Name__c</fullName>
        <description>Adjuster Name to go on the quote document</description>
        <label>Adjuster Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjuster_Phone__c</fullName>
        <description>Adjusters phone number to display on quote document</description>
        <label>Adjuster Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Adjuster_To_Pay__c</fullName>
        <label>Adjuster To Pay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refundable &amp; Non Refundable</fullName>
                </value>
                <value>
                    <fullName>Refundable Only</fullName>
                </value>
                <value>
                    <fullName>Non Refundable Only</fullName>
                </value>
                <value>
                    <fullName>Will Not Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjuster__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Adjuster</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjustment_Credit_Description_Quote__c</fullName>
        <formula>Adjustment_Lookup__r.Credit_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Credit Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Effective_Date_Quote__c</fullName>
        <formula>Adjustment_Lookup__r.Adjustment_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjustment_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment Lookup</label>
        <referenceTo>Adjustment__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjustment_Record_Type__c</fullName>
        <formula>Adjustment_Lookup__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Room_ID__c</fullName>
        <formula>Adjustment_Lookup__r.X18_Char_ID_HotelRoom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Room ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administration_Fee__c</fullName>
        <formula>Properties_Lookup__r.Administration_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Administration Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appliances_Provided_New__c</fullName>
        <label>Appliances_Provided</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appliances_Provided__c</fullName>
        <formula>CASE ( Furniture_Order__r.Appliances__c, &apos;Yes&apos;, &apos;Yes&apos;, &apos;No&apos;, &apos;No&apos;, &apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appliances Provided</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Fee_Quote__c</fullName>
        <formula>Properties_Lookup__r.Application_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EchoSign</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Through_Date__c</fullName>
        <label>Approved Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bedrooms_New__c</fullName>
        <label>Bedrooms</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <formula>CASE (Properties_Lookup__r.Bedrooms__c, &apos;0&apos; , &apos;0&apos; , &apos;1&apos; , &apos;1&apos; , &apos;2&apos; , &apos;2&apos; , &apos;3&apos; , &apos;3&apos; , &apos;4&apos; , &apos;4&apos; , &apos;5&apos; , &apos;5&apos; , &apos;6&apos; , &apos;6&apos; , &apos;7&apos; , &apos;7&apos; , &apos;8&apos; , &apos;8&apos; , &apos;9&apos; , &apos;9&apos; , &apos;10&apos; , &apos;10&apos; , &apos;Other&apos;)</formula>
        <label>Bedrooms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Preference__c</fullName>
        <label>Billing Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entire Amount</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Fee_Amount__c</fullName>
        <formula>Properties_Lookup__r.Broker_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CC_Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Has the credit card been approved</description>
        <label>CC Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRS_Add_On__c</fullName>
        <label>CRS Add On</label>
        <summarizedField>Quote_Costs__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Costs__c.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Furniture Deposit</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Costs__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRS_Room_Rate__c</fullName>
        <formula>Hotel_Room_Lookup__r.CRS_Room_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRS Room Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Delivery_Method_Quote__c</fullName>
        <formula>CASE(Properties_Lookup__r.Send_Via__c, &quot;FedEx Morning&quot;, &quot;FedEx Morning&quot;, &quot;FedEx Standard&quot; , &quot;FedEx Standard&quot; , &quot;FedEx Saturday&quot; , &quot;FedEx Saturday&quot; , &quot;FedEx 2-Day&quot; , &quot;FedEx 2-Day&quot; , &quot;US Mail&quot; , &quot;US Mail&quot; , &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Delivery Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_In_Date__c</fullName>
        <formula>Hotel_Room_Lookup__r.Check_In__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Out_Date__c</fullName>
        <formula>Hotel_Room_Lookup__r.CheckOut__c - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Entity__c</fullName>
        <label>Claim Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Name__c</fullName>
        <label>Claim Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Number_New__c</fullName>
        <label>Claim #</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Number__c</fullName>
        <formula>Service_Request__r.Opportunity__r.Claim__c</formula>
        <label>Claim #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Owner_Name__c</fullName>
        <label>Claim_Owner_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_Team_Number__c</fullName>
        <label>Claim Team Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cleaning_Fee__c</fullName>
        <formula>Properties_Lookup__r.Cleaning_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cleaning Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Daily_Rent_Amount__c</fullName>
        <formula>Extension_Lookup__r.Current_Daily_Rent_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Daily Rent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Other_Fee__c</fullName>
        <formula>IF (ISPICKVAL(Hotel_Room_Lookup__r.Other_Fee_Type__c, &quot;Daily&quot;), Hotel_Room_Lookup__r.Other_Fee_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Other Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Parking_Fee__c</fullName>
        <formula>IF (ISPICKVAL(Hotel_Room_Lookup__r.Parking_Fee_Type__c, &quot;Daily&quot;), Hotel_Room_Lookup__r.Parking_Fee_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Parking Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Pet_Fee__c</fullName>
        <formula>IF (ISPICKVAL(Hotel_Room_Lookup__r.Pet_Fee_Type__c, &quot;Daily&quot;), Hotel_Room_Lookup__r.Pet_Fee_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Pet Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_State__c</fullName>
        <label>Damaged Property State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Zip__c</fullName>
        <label>Damaged Property Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_State__c</fullName>
        <formula>Text(Service_Request__r.Opportunity__r.Damaged_Property_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damaged State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Zip__c</fullName>
        <formula>Service_Request__r.Opportunity__r.Damaged_Property_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damaged Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damages_Fee__c</fullName>
        <formula>Properties_Lookup__r.Damages_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damages Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_Notice_Required_New__c</fullName>
        <label>Days Notice Required</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Notice_Required__c</fullName>
        <formula>Properties_Lookup__r.Days_Notice_Required__c</formula>
        <label>Days Notice Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Extend_Quote__c</fullName>
        <description>The number of days to extend the placements on a major extension.</description>
        <formula>Extension_Lookup__r.Number_of_Days_Extended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days to extend the placements on a major extension.</inlineHelpText>
        <label>Days To Extend Quote</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Fee__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Delivery Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Paid__c</fullName>
        <formula>CASE( Service_Request__r.Deposit_Responsible_Party_Formula__c, &apos;Non Refundable Only&apos;, &apos;Non Refundable Only&apos;, &apos;Refundable &amp; Non Refundable&apos;, &apos;Refundable &amp; Non Refundable&apos;, &apos;Refundable Only&apos;, &apos;Refundable Only&apos;, &apos;Will Not Pay&apos;, &apos;Will Not Pay&apos;, &apos;Other&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Paid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Properties_Lookup__r.Lease_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extend_To_Date_Minor_Quote__c</fullName>
        <formula>IF(Placement_Lookup__r.RecordTypeId=&apos;012700000001W2j&apos;, Extension_Lookup__r.Extend_To_Date__c, Extension_Lookup__r.Extend_To_Date__c  - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extend To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extension Lookup</label>
        <referenceTo>Extension__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extension_Record_Type_Quote__c</fullName>
        <description>The extension record type.</description>
        <formula>Extension_Lookup__r.X18_Char_ID_ExtensionRecordType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extension Record Type Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_Room_ID__c</fullName>
        <formula>Extension_Lookup__r.X18_Char_ID_HotelRoom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extension Room ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FICO_Score_Quote__c</fullName>
        <formula>Service_Request__r.Opportunity__r.FICO_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FICO Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_H_A_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>F/H/A Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_Costs__c</fullName>
        <label>Furniture_Costs</label>
        <summarizedField>Quote_Costs__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Costs__c.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Cost</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Quote_Costs__c.Type__c</field>
            <operation>equals</operation>
            <value>Furniture</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Costs__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Furniture_Deposits__c</fullName>
        <label>Furniture Deposits</label>
        <summarizedField>Quote_Costs__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Costs__c.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Furniture Deposit</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Costs__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Furniture_Fees__c</fullName>
        <label>Furniture Fees</label>
        <summarizedField>Quote_Costs__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Costs__c.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Furniture Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Costs__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Furniture_Option__c</fullName>
        <label>Furniture Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Furniture_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Furniture Order</label>
        <referenceTo>Furniture_Order__c</referenceTo>
        <relationshipLabel>Quote</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Furniture_Reschedule_Fee_Quote__c</fullName>
        <formula>Extension_Lookup__r.Furniture_Reschedule_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Furniture Reschedule Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Account_ID__c</fullName>
        <formula>Placement_Lookup__r.X18_Char_ID_Hotel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Adjustment_Fee_Effective_Date__c</fullName>
        <formula>Adjustment_Lookup__r.Hotel_Fee_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Adjustment Fee Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Adjustment_Fee_Frequency__c</fullName>
        <formula>CASE( Adjustment_Lookup__r.Fee_Frequency__c , &apos;Daily&apos;, &apos;Daily&apos;, &apos;One Time&apos;, &apos;One Time&apos;, &apos;One Time&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Adjustment Fee Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Adjustment_Fee_Type__c</fullName>
        <formula>CASE( Adjustment_Lookup__r.Hotel_Fee_Type__c , &apos;Parking Fee&apos;, &apos;Parking Fee&apos;, &apos;Pet Fee&apos;, &apos;Pet Fee&apos;, &apos;Other Fee&apos;, &apos;Other Fee&apos;, &apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Adjustment Fee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Adjustment_Fee__c</fullName>
        <formula>Adjustment_Lookup__r.Hotel_Adjustment_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Adjustment Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Adjustment_Other_Fee_Description__c</fullName>
        <formula>Adjustment_Lookup__r.Other_Fee_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Adjustment Other Fee Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Adjustment_Rate_Effective_Date__c</fullName>
        <formula>Adjustment_Lookup__r.Rate_Adjustment_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Adjustment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Confirmation_Extension__c</fullName>
        <formula>Extension_Lookup__r.Hotel_Room_ref__r.Confirmation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Confirmation - Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Confirmation__c</fullName>
        <formula>Hotel_Room_Lookup__r.Confirmation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Confirmation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Parking_Fee__c</fullName>
        <formula>IF (ISPICKVAL(Hotel_Room_Lookup__r.Parking_Fee_Type__c, &quot;One-time&quot;), Hotel_Room_Lookup__r.Parking_Fee_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Parking Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Pet_Fee__c</fullName>
        <formula>IF (ISPICKVAL(Hotel_Room_Lookup__r.Pet_Fee_Type__c, &quot;One-time&quot;), Hotel_Room_Lookup__r.Pet_Fee_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Pet Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Rate_Adjustment__c</fullName>
        <formula>Adjustment_Lookup__r.Hotel_Rate_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Rate Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Room_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel Room Lookup</label>
        <referenceTo>Hotel_Room__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hotel_Tax__c</fullName>
        <formula>Hotel_Room_Lookup__r.Itemized_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Housewares_Provided_New__c</fullName>
        <label>Housewares_Provided</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housewares_Provided__c</fullName>
        <formula>CASE( Furniture_Order__r.Housewares__c , &apos;Yes&apos;, &apos;Yes&apos;, &apos;No&apos;, &apos;No&apos;, &apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housewares Provided</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housing_Fee_Eff_Date_Quote__c</fullName>
        <formula>Adjustment_Lookup__r.Housing_Fee_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housing Fee Eff. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Housing_Fee_Type_Quote__c</fullName>
        <formula>CASE ( Adjustment_Lookup__r.Housing_Fee_Type__c , &apos;Application Fee&apos;, &apos;Application Fee&apos; , &apos;Broker Fee&apos; , &apos;Broker Fee&apos; , &apos;Break Lease Fee&apos; , &apos;Break Lease Fee&apos; , &apos;Late Fee&apos; , &apos;Late Fee&apos; , &apos;Cancellation Fee&apos; , &apos;Cancellation Fee&apos; ,  &apos;Pick-Up Fee&apos; , &apos;Pick-Up Fee&apos;, &apos;Delivery Fee&apos; , &apos;Delivery Fee&apos; , &apos;Security Deposit&apos; , &apos;Security Deposit&apos; , &apos;Credit&apos; , &apos;Credit&apos; , &apos;Other&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housing Fee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Increase_CRS_Add_On__c</fullName>
        <inlineHelpText>Enter an amount to add to the CRS Add On calculated by Houston.</inlineHelpText>
        <label>Increase CRS Add On</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Check_Delivery_Method__c</fullName>
        <label>Initial Check Delivery Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Payment_Type_Quote__c</fullName>
        <formula>Case (Properties_Lookup__r.Initial_Payment_Type__c, &quot;Company Check&quot; , &quot;Company Check&quot; , &quot;Cashiers Check&quot; , &quot;Cashiers Check&quot; , &quot;Wire Transfer&quot; , &quot;Wire Transfer&quot; , &quot;ACH Payment&quot; , &quot;ACH Payment&quot; , &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Payment_Type__c</fullName>
        <label>Initial_Payment_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Contact_ID__c</fullName>
        <formula>Properties_Lookup__r.X18_Char_ID_LL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Landlord Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Fee_Description_Quote__c</fullName>
        <formula>Extension_Lookup__r.Landlord_Fee_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Landlord Fee Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Fee_Quote__c</fullName>
        <formula>Extension_Lookup__r.Landlord_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Landlord Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Landlord_Prorate__c</fullName>
        <formula>Properties_Lookup__r.Prorate_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Landlord Prorate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Landlord__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Landlord</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Landlord)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landscape_Maint_Included__c</fullName>
        <formula>CASE (Properties_Lookup__r.Landscape__c, &apos;yes&apos; , &apos;yes&apos;, &apos;no&apos; , &apos;no&apos; , &apos;Other&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Landscape Maint. Included</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Lease_Quote__c</fullName>
        <formula>Properties_Lookup__r.Length_of_Lease_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length of Lease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MHS_Booking__c</fullName>
        <formula>CASE(Placement_Lookup__r.MHS_Booking__c  , &apos;Yes&apos;, &apos;Yes&apos;, &apos;No&apos;, &apos;No&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MHS Booking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Markup_Adjustment_Reason__c</fullName>
        <label>Markup Adjustment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Time Adjuster</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Due to criminal/credit History</fullName>
                </value>
                <value>
                    <fullName>Due to deposit</fullName>
                </value>
                <value>
                    <fullName>Due to lease term</fullName>
                </value>
                <value>
                    <fullName>Fair Market Adjustment</fullName>
                </value>
                <value>
                    <fullName>Increased Mark Up</fullName>
                </value>
                <value>
                    <fullName>Low ALE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Policyholder Located</fullName>
                </value>
                <value>
                    <fullName>SLA Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Markup_Adjustment__c</fullName>
        <label>Markup Adjustment</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Markup_Authorized_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Markup Adjustment Authorized By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Markup_Total__c</fullName>
        <label>Total Markup</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Markup__c</fullName>
        <label>Markup</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_PTID__c</fullName>
        <description>used for creating qoutes on initial data load</description>
        <externalId>true</externalId>
        <label>Migration_PTID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <label>Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Daily_Rent_Amount__c</fullName>
        <formula>Extension_Lookup__r.New_Daily_Rent_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Daily Rent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>